# churnmlops

./: .gitignore  Dockerfile  MLproject  README.md  invoke.yaml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: publish.yml
churnmlops/: .pre-commit-config.yaml
churnmlops/mlartifacts/510170351996542517/1fe51bc190e7460fad3776cfadd5c8f7/artifacts/churn_model/: model.pkl
churnmlops/src/churnmlops/: __init__.py  config.yaml
churnmlops/src/churnmlops/trainers/: trainer.py
mlartifacts/510170351996542517/1fe51bc190e7460fad3776cfadd5c8f7/artifacts/churn_model/: MLmodel
mlartifacts/510170351996542517/3bfe225b3a554a2c96f13bb8382a0b91/artifacts/churn_model/: MLmodel  model.pkl  requirements.txt
mlartifacts/510170351996542517/5afdd5fdcaa34b5d8169f4f42de550b7/artifacts/churn_model/: model.pkl
mlartifacts/510170351996542517/5de17433130f449fb8f4e387b709f140/artifacts/churn_model/: python_env.yaml
mlartifacts/510170351996542517/5e02874258114c178312193a851a49a6/artifacts/churn_model/: model.pkl
mlartifacts/510170351996542517/7ae94dfc184746eea4046ee7da7e924f/artifacts/models/: MLmodel
mlartifacts/510170351996542517/861ab66e215b4f1db7ebd3f15a7a8681/artifacts/churn_model/: model.pkl
mlartifacts/510170351996542517/9cab96d68c6c49fea8579c5b0714687c/artifacts/models/: MLmodel
mlartifacts/510170351996542517/a34e4c592c954167952d64f8a2dd5f25/artifacts/churn_model/: model.pkl
mlartifacts/510170351996542517/cb3c41ea855141158e2fa380527a774b/artifacts/models/: MLmodel  model.pkl
mlartifacts/510170351996542517/dbec5300800b4ad4911aca5372eee76e/artifacts/models/: conda.yaml
mlartifacts/510170351996542517/e46624d2b20c4b09b54409a7c8b27b56/artifacts/churn_model/: MLmodel  model.pkl
mlartifacts/510170351996542517/fc29f7e047ab4595b68b3c3637a2ed32/artifacts/churn_model/: MLmodel  model.pkl
mlartifacts/610218224008585273/38f8d5462a534568a79d6782308f69bf/artifacts/models/: MLmodel  model.pkl
notebooks/: Bank_customers_exploratory.ipynb
src/churnmlops/: __main__.py  config.yaml  scripts.py
src/churnmlops/models/: model_factory.py
src/churnmlops/utils/: mlflow_logger.py  preprocessor.py
tests/: test_scripts.py
(+9 files in other folders)
