# https://python-poetry.org/docs/pyproject/

# PROJECT

[tool.poetry]
name = "churnmlops"
version = "0.1.0"
description = "MLOps system for customer churn prediction"
repository = "https://github.com/nachojeda/churnmlops"
documentation = "https://nachojeda.github.io/churnmlops/"
authors = ["nachojeda"]
readme = "README.md"
license = "MIT"
packages = [{ include = "churnmlops", from = "src" }]

# SCRIPTS

[tool.poetry.scripts]
churnmlops = "churnmlops.scripts:main"

# DEPENDENCIES

[tool.poetry.dependencies]
python = "^3.10.5"
mlflow = "^2.14.3"
setuptools = "^71.1.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
tensorflow = "^2.17.0"
keras-tuner = "^1.4.7"
keras = "^3.6.0"
xgboost = "^2.1.1"
logging = "^0.4.9.6"

[tool.poetry.group.checks.dependencies]
bandit = "^1.7.9"
coverage = "^7.5.4"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.5.0"

[tool.poetry.group.commits.dependencies]
commitizen = "^3.27.0"
pre-commit = "^3.7.1"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

# CONFIGURATIONS

[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
strict = true
python_version = "^3.10"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py^310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

# SYSTEMS

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
